# finance-manager

./: .gitignore  pyproject.toml
supabase/: config.toml
supabase/migrations/: 20260117151743_initial_setup.sql  20260119121738_add_details_to_transactions.sql  20260119143500_create_users_table.sql
